tailwindcss and swiper

--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,7 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+<!--    <script src="../src/assets/swiper.js"></script>-->
+<!--    <script src="../src/assets/general.js"></script>-->
   </body>
 </html>
